release/1.8.8/VERSION.md
# 1.8.8

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.8.8```   |
| Release Time   | ```2015-07-27T10:31:28+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.8```   |
| sha1   | ```f6ad102bcaa53b1a58358f16e376d548d44933ec```   |
| size   | ```78494```   |
| total size  | ```114885064```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/f6ad102bcaa53b1a58358f16e376d548d44933ec/1.8.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```0983f08be6a4e624f5d85689d1aca869ed99c738```   |
| size   | ```8465313```   |
| url       | ```https://launcher.mojang.com/v1/objects/0983f08be6a4e624f5d85689d1aca869ed99c738/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```5fafba3f58c40dc51b5c3ca72a98f62dfdae1db7```   |
| size   | ```8322852```   |
| url       | ```https://launcher.mojang.com/v1/objects/5fafba3f58c40dc51b5c3ca72a98f62dfdae1db7/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |